-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (workspace/open/src/hotspot/share/oops/inlineKlass.cpp:70), pid=20957, tid=20991
# assert(is_initialized() || is_being_initialized() || is_in_error_state()) failed: default value is set at the beginning of initialization
Current CompileTask:
C2: 7707 1238 b 4 compiler.valhalla.inlinetypes.TestNullableInlineTypes::test87 (14 bytes)
Stack: [0x00007f55ed1ea000,0x00007f55ed2eb000], sp=0x00007f55ed2e7590, free space=1013k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf1e1f4] InlineKlass::default_value()+0x324
V [libjvm.so+0x96837e] ciInlineKlass::default_instance() const+0x3ae
V [libjvm.so+0xf2d69c] InlineTypeNode::Ideal(PhaseGVN*, bool)+0x1bc
V [libjvm.so+0x174ac95] PhaseGVN::transform_no_reclaim(Node*)+0x25
V [libjvm.so+0xf2edf3] InlineTypeNode::make_null(PhaseGVN&, ciInlineKlass*)+0x1f3
V [libjvm.so+0xf2eecb] InlineTypeNode::make_null(PhaseGVN&, ciInlineKlass*)+0x2cb
V [libjvm.so+0xf2e8cb] InlineTypePtrNode::make_null(PhaseGVN&, ciInlineKlass*)+0x2eb
V [libjvm.so+0xf2ff7e] InlineTypeNode::make_from_oop(GraphKit*, Node*, ciInlineKlass*, bool)+0x75e
V [libjvm.so+0x17047a8] Parse::Parse(JVMState*, ciMethod*, float)+0xa78
V [libjvm.so+0x8c8925] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xad07cb] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x143b
V [libjvm.so+0x8c3c66] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae0c48] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae19e8] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f67fa] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19febc0] Thread::call_run()+0x100
V [libjvm.so+0x16b5b94] thread_native_entry(Thread*)+0x104
#
# Internal Error (workspace/open/src/hotspot/share/oops/inlineKlass.cpp:70), pid=20957, tid=20991
# assert(is_initialized() || is_being_initialized() || is_in_error_state()) failed: default value is set at the beginning of initialization
Current CompileTask:
C2: 7707 1238 b 4 compiler.valhalla.inlinetypes.TestNullableInlineTypes::test87 (14 bytes)
Stack: [0x00007f55ed1ea000,0x00007f55ed2eb000], sp=0x00007f55ed2e7590, free space=1013k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xf1e1f4] InlineKlass::default_value()+0x324
V [libjvm.so+0x96837e] ciInlineKlass::default_instance() const+0x3ae
V [libjvm.so+0xf2d69c] InlineTypeNode::Ideal(PhaseGVN*, bool)+0x1bc
V [libjvm.so+0x174ac95] PhaseGVN::transform_no_reclaim(Node*)+0x25
V [libjvm.so+0xf2edf3] InlineTypeNode::make_null(PhaseGVN&, ciInlineKlass*)+0x1f3
V [libjvm.so+0xf2eecb] InlineTypeNode::make_null(PhaseGVN&, ciInlineKlass*)+0x2cb
V [libjvm.so+0xf2e8cb] InlineTypePtrNode::make_null(PhaseGVN&, ciInlineKlass*)+0x2eb
V [libjvm.so+0xf2ff7e] InlineTypeNode::make_from_oop(GraphKit*, Node*, ciInlineKlass*, bool)+0x75e
V [libjvm.so+0x17047a8] Parse::Parse(JVMState*, ciMethod*, float)+0xa78
V [libjvm.so+0x8c8925] ParseGenerator::generate(JVMState*)+0x115
V [libjvm.so+0xad07cb] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x143b
V [libjvm.so+0x8c3c66] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x6b6
V [libjvm.so+0xae0c48] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc88
V [libjvm.so+0xae19e8] CompileBroker::compiler_thread_loop()+0x648
V [libjvm.so+0x19f67fa] JavaThread::thread_main_inner()+0x25a
V [libjvm.so+0x19febc0] Thread::call_run()+0x100
V [libjvm.so+0x16b5b94] thread_native_entry(Thread*)+0x104