8280270: [lworld] C2 misses some klass initialization checks